--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mainContain{
+  /* margin-top: 0vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 60px;
+  /* width: 100vw; */
 }
 
-.App-link {
-  color: #61dafb;
+.dealerCards{
+  /* margin-top: 0vh; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 60px;
+  /* width: 100vw; */
+}
+.dealerCards1{
+  /* margin-top: 0vh; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 60px;
+  /* width: 100vw; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.playerCards{
+  /* margin-top: 0vh; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 60px;
+  /* width: 100vw; */
+}
+
+.dealerCard1{
+  box-shadow: rgb(0 0 0 / 6%) 0px 26px 30px -10px,
+  rgb(0 0 0 / 73%) 0px 16px 10px -10px;
+  border-style: double ;
+  border-width: 2px;
+  padding: 10px;
+  margin: 20px;
+}
+
+.playerCard{
+  box-shadow: rgb(0 0 0 / 12%) 0px 26px 30px -10px,
+  rgb(0 0 0 / 73%) 0px 16px 10px -10px;
+  border-style: double ;
+  border-width: 2px;
+  padding: 10px;
+  margin: 20px;
 }
