--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,11 @@
 .dealerCard1{
   box-shadow: rgb(0 0 0 / 6%) 0px 26px 30px -10px,
   rgb(0 0 0 / 73%) 0px 16px 10px -10px;
+  display: flex;
+  flex-direction: column;
   border-style: double ;
+  align-items: center;
+  justify-content: center;
   border-width: 2px;
   padding: 10px;
   margin: 20px;
@@ -50,6 +54,10 @@
   box-shadow: rgb(0 0 0 / 12%) 0px 26px 30px -10px,
   rgb(0 0 0 / 73%) 0px 16px 10px -10px;
   border-style: double ;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border-width: 2px;
   padding: 10px;
   margin: 20px;
