--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -8,7 +8,7 @@
     justify-content: center;
     border-width: 2px;
     padding: 10px;
-    width: 20px;
+    width: 50px;
     margin: 20px;
 }
 
@@ -16,3 +16,12 @@
     display: flex;
     flex-direction: row;
 }
+
+.diamond{
+    background-color: red;
+}
+
+.heart{
+    background-color: red;
+}
+
