--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 .mainContain{
-  /* margin-top: 0vh; */
+  /* margin-top: 0vh; 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+*/
+  /* width: 100vw; 
+  background-image: './holdemBackground';*/
 
-  /* width: 100vw; */
+  background: url("./holdemBackground.avif") ;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 1000px 800px;
 }
 
 .dealerCards{
@@ -73,6 +79,11 @@
   display: flex;
   height: 100px; 
 }
+.playerCardsParent1{
+  display: flex;
+  height: 100px; 
+  padding-top: 150px;
+}
 
 .communal{
   display: flex;
@@ -104,6 +115,11 @@
   margin-top: 90px;
   height: 100px;
   width: 100px;
+
+
+}
+
+.computerHand1{
 
 
 }
