--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding: 60px;
+
   /* width: 100vw; */
 }
 
@@ -118,6 +118,42 @@
   height: 100px;
   width: 100px;
   margin-bottom: 80px;
+}
+.button2{
+  box-shadow: inset 0 0 0 1px grey;
+  opacity: 0.35;
+  border-radius: 0px;
+  padding: 8px 14px;
+  transition-duration: 167ms;
+  text-align: center;
+  width: min-content;
+  margin-top: 35px;
+  align-self: flex-end;
+  margin-top: 80px;
+  height: 100px;
+  width: 100px;
+  margin-bottom:10px;
+}
+.button2:hover {
+  background-color: #c1d3eb;
+  box-shadow: inset 0 0 0 1px #c1d3eb;
+  border-radius: 70px;
+  border-color: red;
+  border-style: hidden;
+  background-image: url('https://static.vecteezy.com/system/resources/previews/012/862/415/non_2x/red-poker-chip-on-white-background-single-red-casino-chip-symbol-flat-style-vector.jpg');
+  background-repeat: no-repeat;
+  background-size:contain;
+  opacity: 1;
+  color: #6f90be;
+  cursor: pointer;
+  margin-top: 80px;
+  height: 100px;
+  width: 100px;
+  color: black;
+  font-size: large;
+  margin-bottom:10px;
+  box-shadow: rgb(0 0 0 / 6%) 0px 96px 90px -10px,
+  rgb(0 0 0 / 93%) 0px 19px 10px -10px;
 }
 
 .computerHand1{
